--- a/backend/server/.env
+++ b/backend/server/.env
@@ -1,1 +1,1 @@
-Mongo URL ="mongodb://localhost:27017/InstaDatabase";
+Mongo_URL =mongodb+srv://dummyuser:du03092001@cluster0.2cozgta.mongodb.net/?retryWrites=true&w=majority;
