--- a/backend/server/package.json
+++ b/backend/server/package.json
@@ -3,6 +3,7 @@
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "modules": "^0.4.0",
     "mongoose": "^7.1.1",
@@ -14,10 +15,9 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon ./app.js",
-    "build" : "npm build"
+    "build": "npm build"
   },
   "author": "",
   "license": "ISC",
